Parameterize Dans code; add judgment/logging helpers; add second ipynb

--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# hello-ltr\n",
     "\n",
@@ -11,22 +14,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Download some requirements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GET https://dl.bintray.com/o19s/RankyMcRankFace/com/o19s/RankyMcRankFace/0.1.1/RankyMcRankFace-0.1.1.jar\n",
       "GET http://es-learn-to-rank.labs.o19s.com/tmdb.json\n",
+      "GET http://es-learn-to-rank.labs.o19s.com/RankyMcRankFace.jar\n",
       "Done.\n"
      ]
     }
@@ -38,7 +48,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Index Movies"
    ]
@@ -46,7 +59,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -66,13 +83,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Create FeatureSet\n",
-    "A feature set is required to log out features to train models.  This step creates the `release` feature set, it consists of one feature, the release year of a movie\n",
-    "\n",
-    "```json\n",
-    "{\n",
+    "A feature set is required to log out features to train models.  This step creates the `release` feature set, it consists of one feature, the release year of a movie\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed LTR feature store: 200\n",
+      "Initialize LTR: 200\n",
+      "Created RELEASE feature set: 201\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = {\n",
     "    \"featureset\": {\n",
     "        \"features\": [\n",
     "            {\n",
@@ -91,32 +131,18 @@
     "        ]\n",
     "    }\n",
     "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed LTR feature store: 200\n",
-      "Initialize LTR: 200\n",
-      "Created RELEASE feature set: 201\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
+    "\n",
     "from ltr import setup_ltr\n",
-    "setup_ltr.run()"
+    "setup_ltr.run(config=config, featureSet='release')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Logging and Ratings\n",
     "For this example we're working with one query, `match_all`.  We utilize the `sltr` query to log out features which will be tagged with a rating to be used in training.\n",
@@ -129,8 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -142,13 +172,18 @@
     }
    ],
    "source": [
-    "from ltr import ratings\n",
-    "ratings.run()"
+    "from ltr import years_as_ratings\n",
+    "years_as_ratings.run(featureSet='release',\n",
+    "                     classicTrainingSetOut='data/classic-training.txt',\n",
+    "                     latestTrainingSetOut='data/latest-training.txt')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Train and Submit\n",
     "Using the training data from the previous step, we'll use RankyMcRankFace to spit out two LambaMART models.  Once these files are generated, we can then submit them to elastic to be used in scoring."
@@ -156,30 +191,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Syncing models to elastic\n",
-      "Delete model classic: 404\n",
-      "Created model classic: 201\n",
-      "Delete model latest: 404\n",
-      "Created model latest: 201\n",
-      "Done\n"
+     "ename": "TypeError",
+     "evalue": "run() got an unexpected keyword argument 'trainingSet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-9a1ae3815164>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainingSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/latest-training.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfearureSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'release'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'latest'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainingSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/classic-training.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfearureSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'release'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'classic'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: run() got an unexpected keyword argument 'trainingSet'"
      ]
     }
    ],
    "source": [
     "from ltr import train\n",
-    "train.run()"
+    "train.run(trainingSetIn='data/latest-training.txt', fearureSet='release', modelName='latest')\n",
+    "train.run(trainingSetIn='data/classic-training.txt', fearureSet='release', modelName='classic')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Query Time\n",
     "If we search for `batman`, how do the results compare?  Since the `classic` model prefered old movies it has old movies in the top position, and the opposite is true for the `latest` model.  To continue learning LTR, brainstorm more features and generate some real judgments for real queries."
@@ -188,7 +230,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -381,7 +427,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
@@ -402,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
