--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -199,21 +199,22 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "run() got an unexpected keyword argument 'trainingSet'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-9a1ae3815164>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainingSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/latest-training.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfearureSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'release'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'latest'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainingSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'data/classic-training.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfearureSet\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'release'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'classic'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: run() got an unexpected keyword argument 'trainingSet'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delete model latest: 404\n",
+      "Created model latest: 201\n",
+      "Done\n",
+      "Delete model classic: 404\n",
+      "Created model classic: 201\n",
+      "Done\n"
      ]
     }
    ],
    "source": [
     "from ltr import train\n",
-    "train.run(trainingSetIn='data/latest-training.txt', fearureSet='release', modelName='latest')\n",
-    "train.run(trainingSetIn='data/classic-training.txt', fearureSet='release', modelName='classic')"
+    "train.run(trainingSetIn='data/latest-training.txt', featureSet='release', modelName='latest')\n",
+    "train.run(trainingSetIn='data/classic-training.txt', featureSet='release', modelName='classic')"
    ]
   },
   {
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -239,10 +240,10 @@
     {
      "data": {
       "text/html": [
-       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
       ]
      },
      "metadata": {},
@@ -251,17 +252,11 @@
     {
      "data": {
       "application/vnd.plotly.v1+json": {
-       "config": {
-        "linkText": "Export to plot.ly",
-        "plotlyServerURL": "https://plot.ly",
-        "showLink": false
-       },
        "data": [
         {
          "mode": "lines",
          "name": "classic",
          "type": "scatter",
-         "uid": "f5196e21-92bd-4559-b207-babf42adf814",
          "x": [
           0,
           1,
@@ -298,22 +293,23 @@
           "1949",
           "1943",
           "1966",
-          "1993",
           "1989",
-          "2010",
           "2005",
-          "2014",
-          "2011",
+          "2010",
           "2000",
           "2012",
-          "2017",
-          "2014",
-          "2015",
-          "2008",
-          "2009",
-          "2016",
-          "2010",
           "2013",
+          "2014",
+          "1993",
+          "2011",
+          "2017",
+          "2010",
+          "2016",
+          "2009",
+          "1992",
+          "2008",
+          "2015",
+          "2014",
           "2016",
           "2016",
           "1995",
@@ -321,17 +317,15 @@
           "1998",
           "1998",
           "2005",
-          "2008",
           "2003",
-          "2013",
-          "1992"
+          "2008",
+          "2013"
          ]
         },
         {
          "mode": "lines",
          "name": "latest",
          "type": "scatter",
-         "uid": "80ba7aea-d76d-4d5b-ab38-600987120a01",
          "x": [
           0,
           1,
@@ -367,30 +361,30 @@
          "y": [
           "2013",
           "2013",
-          "2011",
           "2012",
-          "2016",
-          "2016",
-          "2016",
+          "2011",
           "2017",
+          "2014",
+          "2014",
+          "2016",
           "2015",
-          "2014",
-          "2014",
-          "2000",
+          "2016",
+          "2016",
+          "2010",
+          "2010",
+          "1993",
           "1992",
-          "1995",
+          "2005",
+          "2000",
+          "2008",
           "1997",
           "1998",
           "1998",
           "2005",
-          "2005",
           "2003",
-          "2010",
           "2008",
           "2009",
-          "2010",
-          "2008",
-          "1993",
+          "1995",
           "1989",
           "1966",
           "1949",
@@ -401,18 +395,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"b827d46e-bae3-4796-b6cd-588888c7514e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"b827d46e-bae3-4796-b6cd-588888c7514e\")) {\n",
-       "    Plotly.newPlot(\"b827d46e-bae3-4796-b6cd-588888c7514e\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1993\", \"1989\", \"2010\", \"2005\", \"2014\", \"2011\", \"2000\", \"2012\", \"2017\", \"2014\", \"2015\", \"2008\", \"2009\", \"2016\", \"2010\", \"2013\", \"2016\", \"2016\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2008\", \"2003\", \"2013\", \"1992\"], \"type\": \"scatter\", \"uid\": \"f5196e21-92bd-4559-b207-babf42adf814\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2013\", \"2013\", \"2011\", \"2012\", \"2016\", \"2016\", \"2016\", \"2017\", \"2015\", \"2014\", \"2014\", \"2000\", \"1992\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2005\", \"2003\", \"2010\", \"2008\", \"2009\", \"2010\", \"2008\", \"1993\", \"1989\", \"1966\", \"1949\", \"1943\"], \"type\": \"scatter\", \"uid\": \"80ba7aea-d76d-4d5b-ab38-600987120a01\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
-       "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"b827d46e-bae3-4796-b6cd-588888c7514e\")) {window._Plotly.Plots.resize(document.getElementById(\"b827d46e-bae3-4796-b6cd-588888c7514e\"));};})</script>"
+       "<div id=\"fc6da4e1-779e-4c7b-b6f8-454d236b4bc7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fc6da4e1-779e-4c7b-b6f8-454d236b4bc7\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1989\", \"2005\", \"2010\", \"2000\", \"2012\", \"2013\", \"2014\", \"1993\", \"2011\", \"2017\", \"2010\", \"2016\", \"2009\", \"1992\", \"2008\", \"2015\", \"2014\", \"2016\", \"2016\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\"], \"mode\": \"lines\", \"name\": \"classic\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2013\", \"2013\", \"2012\", \"2011\", \"2017\", \"2014\", \"2014\", \"2016\", \"2015\", \"2016\", \"2016\", \"2010\", \"2010\", \"1993\", \"1992\", \"2005\", \"2000\", \"2008\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2009\", \"1995\", \"1989\", \"1966\", \"1949\", \"1943\"], \"mode\": \"lines\", \"name\": \"latest\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"b827d46e-bae3-4796-b6cd-588888c7514e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"b827d46e-bae3-4796-b6cd-588888c7514e\")) {\n",
-       "    Plotly.newPlot(\"b827d46e-bae3-4796-b6cd-588888c7514e\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1993\", \"1989\", \"2010\", \"2005\", \"2014\", \"2011\", \"2000\", \"2012\", \"2017\", \"2014\", \"2015\", \"2008\", \"2009\", \"2016\", \"2010\", \"2013\", \"2016\", \"2016\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2008\", \"2003\", \"2013\", \"1992\"], \"type\": \"scatter\", \"uid\": \"f5196e21-92bd-4559-b207-babf42adf814\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2013\", \"2013\", \"2011\", \"2012\", \"2016\", \"2016\", \"2016\", \"2017\", \"2015\", \"2014\", \"2014\", \"2000\", \"1992\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2005\", \"2003\", \"2010\", \"2008\", \"2009\", \"2010\", \"2008\", \"1993\", \"1989\", \"1966\", \"1949\", \"1943\"], \"type\": \"scatter\", \"uid\": \"80ba7aea-d76d-4d5b-ab38-600987120a01\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
-       "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"b827d46e-bae3-4796-b6cd-588888c7514e\")) {window._Plotly.Plots.resize(document.getElementById(\"b827d46e-bae3-4796-b6cd-588888c7514e\"));};})</script>"
+       "<div id=\"fc6da4e1-779e-4c7b-b6f8-454d236b4bc7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fc6da4e1-779e-4c7b-b6f8-454d236b4bc7\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1989\", \"2005\", \"2010\", \"2000\", \"2012\", \"2013\", \"2014\", \"1993\", \"2011\", \"2017\", \"2010\", \"2016\", \"2009\", \"1992\", \"2008\", \"2015\", \"2014\", \"2016\", \"2016\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\"], \"mode\": \"lines\", \"name\": \"classic\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2013\", \"2013\", \"2012\", \"2011\", \"2017\", \"2014\", \"2014\", \"2016\", \"2015\", \"2016\", \"2016\", \"2010\", \"2010\", \"1993\", \"1992\", \"2005\", \"2000\", \"2008\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2009\", \"1995\", \"1989\", \"1966\", \"1949\", \"1943\"], \"mode\": \"lines\", \"name\": \"latest\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
