--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -213,8 +213,8 @@
    ],
    "source": [
     "from ltr import train\n",
-    "train.run(trainingSetIn='data/latest-training.txt', featureSet='release', modelName='latest')\n",
-    "train.run(trainingSetIn='data/classic-training.txt', featureSet='release', modelName='classic')"
+    "train.run(trainingInFile='data/latest-training.txt', featureSet='release', modelName='latest')\n",
+    "train.run(trainingInFile='data/classic-training.txt', featureSet='release', modelName='classic')"
    ]
   },
   {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -293,33 +293,33 @@
           "1949",
           "1943",
           "1966",
+          "1993",
           "1989",
+          "1992",
+          "1995",
           "2005",
           "2010",
           "2000",
           "2012",
           "2013",
-          "2014",
-          "1993",
           "2011",
-          "2017",
           "2010",
-          "2016",
           "2009",
-          "1992",
           "2008",
-          "2015",
-          "2014",
-          "2016",
-          "2016",
-          "1995",
           "1997",
           "1998",
           "1998",
           "2005",
           "2003",
           "2008",
-          "2013"
+          "2013",
+          "2014",
+          "2017",
+          "2016",
+          "2015",
+          "2014",
+          "2016",
+          "2016"
          ]
         },
         {
@@ -359,33 +359,33 @@
           29
          ],
          "y": [
-          "2013",
-          "2013",
-          "2012",
-          "2011",
-          "2017",
-          "2014",
-          "2014",
-          "2016",
           "2015",
           "2016",
           "2016",
-          "2010",
-          "2010",
+          "2016",
+          "2014",
+          "2014",
+          "2017",
+          "2012",
+          "2013",
+          "2011",
+          "2013",
           "1993",
           "1992",
-          "2005",
-          "2000",
-          "2008",
+          "1995",
           "1997",
           "1998",
           "1998",
           "2005",
+          "2010",
+          "2000",
+          "2010",
+          "1989",
+          "2009",
+          "2008",
+          "2005",
           "2003",
           "2008",
-          "2009",
-          "1995",
-          "1989",
           "1966",
           "1949",
           "1943"
@@ -395,10 +395,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"fc6da4e1-779e-4c7b-b6f8-454d236b4bc7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fc6da4e1-779e-4c7b-b6f8-454d236b4bc7\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1989\", \"2005\", \"2010\", \"2000\", \"2012\", \"2013\", \"2014\", \"1993\", \"2011\", \"2017\", \"2010\", \"2016\", \"2009\", \"1992\", \"2008\", \"2015\", \"2014\", \"2016\", \"2016\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\"], \"mode\": \"lines\", \"name\": \"classic\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2013\", \"2013\", \"2012\", \"2011\", \"2017\", \"2014\", \"2014\", \"2016\", \"2015\", \"2016\", \"2016\", \"2010\", \"2010\", \"1993\", \"1992\", \"2005\", \"2000\", \"2008\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2009\", \"1995\", \"1989\", \"1966\", \"1949\", \"1943\"], \"mode\": \"lines\", \"name\": \"latest\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c5b33ad5-767a-4fe8-ae77-601c1401eccb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c5b33ad5-767a-4fe8-ae77-601c1401eccb\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1993\", \"1989\", \"1992\", \"1995\", \"2005\", \"2010\", \"2000\", \"2012\", \"2013\", \"2011\", \"2010\", \"2009\", \"2008\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\", \"2014\", \"2017\", \"2016\", \"2015\", \"2014\", \"2016\", \"2016\"], \"mode\": \"lines\", \"name\": \"classic\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2015\", \"2016\", \"2016\", \"2016\", \"2014\", \"2014\", \"2017\", \"2012\", \"2013\", \"2011\", \"2013\", \"1993\", \"1992\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2010\", \"2000\", \"2010\", \"1989\", \"2009\", \"2008\", \"2005\", \"2003\", \"2008\", \"1966\", \"1949\", \"1943\"], \"mode\": \"lines\", \"name\": \"latest\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"fc6da4e1-779e-4c7b-b6f8-454d236b4bc7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fc6da4e1-779e-4c7b-b6f8-454d236b4bc7\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1989\", \"2005\", \"2010\", \"2000\", \"2012\", \"2013\", \"2014\", \"1993\", \"2011\", \"2017\", \"2010\", \"2016\", \"2009\", \"1992\", \"2008\", \"2015\", \"2014\", \"2016\", \"2016\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\"], \"mode\": \"lines\", \"name\": \"classic\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2013\", \"2013\", \"2012\", \"2011\", \"2017\", \"2014\", \"2014\", \"2016\", \"2015\", \"2016\", \"2016\", \"2010\", \"2010\", \"1993\", \"1992\", \"2005\", \"2000\", \"2008\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2009\", \"1995\", \"1989\", \"1966\", \"1949\", \"1943\"], \"mode\": \"lines\", \"name\": \"latest\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c5b33ad5-767a-4fe8-ae77-601c1401eccb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c5b33ad5-767a-4fe8-ae77-601c1401eccb\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1993\", \"1989\", \"1992\", \"1995\", \"2005\", \"2010\", \"2000\", \"2012\", \"2013\", \"2011\", \"2010\", \"2009\", \"2008\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\", \"2014\", \"2017\", \"2016\", \"2015\", \"2014\", \"2016\", \"2016\"], \"mode\": \"lines\", \"name\": \"classic\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2015\", \"2016\", \"2016\", \"2016\", \"2014\", \"2014\", \"2017\", \"2012\", \"2013\", \"2011\", \"2013\", \"1993\", \"1992\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2010\", \"2000\", \"2010\", \"1989\", \"2009\", \"2008\", \"2005\", \"2003\", \"2008\", \"1966\", \"1949\", \"1943\"], \"mode\": \"lines\", \"name\": \"latest\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
