Training and Submit abstraction

--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -28513,20 +28513,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Delete model latest: 404\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/latest-training.txt -save data/latest_model.txt\n",
+      "DONE\n",
+      "Delete model latest: 200\n",
       "Created model latest: 201\n",
-      "Done\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/classic-training.txt -save data/classic_model.txt\n",
+      "DONE\n",
       "Delete model classic: 404\n",
-      "Created model classic: 201\n",
-      "Done\n"
+      "Created model classic: 201\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ltr.train.TrainingLog at 0x1033321d0>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
