--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -28557,175 +28557,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "mode": "lines",
-         "name": "classic",
-         "type": "scatter",
-         "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19,
-          20,
-          21,
-          22,
-          23,
-          24,
-          25,
-          26,
-          27,
-          28,
-          29
-         ],
-         "y": [
-          "1949",
-          "1943",
-          "1966",
-          "1993",
-          "1989",
-          "1992",
-          "1995",
-          "2005",
-          "2010",
-          "2000",
-          "2012",
-          "2013",
-          "2011",
-          "2010",
-          "2009",
-          "2008",
-          "1997",
-          "1998",
-          "1998",
-          "2005",
-          "2003",
-          "2008",
-          "2013",
-          "2014",
-          "2017",
-          "2016",
-          "2015",
-          "2014",
-          "2016",
-          "2016"
-         ]
-        },
-        {
-         "mode": "lines",
-         "name": "latest",
-         "type": "scatter",
-         "x": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7,
-          8,
-          9,
-          10,
-          11,
-          12,
-          13,
-          14,
-          15,
-          16,
-          17,
-          18,
-          19,
-          20,
-          21,
-          22,
-          23,
-          24,
-          25,
-          26,
-          27,
-          28,
-          29
-         ],
-         "y": [
-          "2015",
-          "2016",
-          "2016",
-          "2016",
-          "2014",
-          "2014",
-          "2017",
-          "2012",
-          "2013",
-          "2011",
-          "2013",
-          "1993",
-          "1992",
-          "1995",
-          "1997",
-          "1998",
-          "1998",
-          "2005",
-          "2010",
-          "2000",
-          "2010",
-          "1989",
-          "2009",
-          "2008",
-          "2005",
-          "2003",
-          "2008",
-          "1966",
-          "1949",
-          "1943"
-         ]
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"c5b33ad5-767a-4fe8-ae77-601c1401eccb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c5b33ad5-767a-4fe8-ae77-601c1401eccb\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1993\", \"1989\", \"1992\", \"1995\", \"2005\", \"2010\", \"2000\", \"2012\", \"2013\", \"2011\", \"2010\", \"2009\", \"2008\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\", \"2014\", \"2017\", \"2016\", \"2015\", \"2014\", \"2016\", \"2016\"], \"mode\": \"lines\", \"name\": \"classic\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2015\", \"2016\", \"2016\", \"2016\", \"2014\", \"2014\", \"2017\", \"2012\", \"2013\", \"2011\", \"2013\", \"1993\", \"1992\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2010\", \"2000\", \"2010\", \"1989\", \"2009\", \"2008\", \"2005\", \"2003\", \"2008\", \"1966\", \"1949\", \"1943\"], \"mode\": \"lines\", \"name\": \"latest\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"c5b33ad5-767a-4fe8-ae77-601c1401eccb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c5b33ad5-767a-4fe8-ae77-601c1401eccb\", [{\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1993\", \"1989\", \"1992\", \"1995\", \"2005\", \"2010\", \"2000\", \"2012\", \"2013\", \"2011\", \"2010\", \"2009\", \"2008\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\", \"2014\", \"2017\", \"2016\", \"2015\", \"2014\", \"2016\", \"2016\"], \"mode\": \"lines\", \"name\": \"classic\"}, {\"type\": \"scatter\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2015\", \"2016\", \"2016\", \"2016\", \"2014\", \"2014\", \"2017\", \"2012\", \"2013\", \"2011\", \"2013\", \"1993\", \"1992\", \"1995\", \"1997\", \"1998\", \"1998\", \"2005\", \"2010\", \"2000\", \"2010\", \"1989\", \"2009\", \"2008\", \"2005\", \"2003\", \"2008\", \"1966\", \"1949\", \"1943\"], \"mode\": \"lines\", \"name\": \"latest\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (plot.py, line 25)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/Users/daniel/dev/osc/train/hello-ltr/venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3291\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-6efd4710602c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from ltr import plot\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/daniel/dev/osc/train/hello-ltr/ltr/plot.py\"\u001b[0;36m, line \u001b[0;32m25\u001b[0m\n\u001b[0;31m    xAxes = []\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
