Building out solr client. Indexing

--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -28561,15 +28561,186 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (plot.py, line 25)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/Users/daniel/dev/osc/train/hello-ltr/venv/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3291\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-6efd4710602c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from ltr import plot\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/Users/daniel/dev/osc/train/hello-ltr/ltr/plot.py\"\u001b[0;36m, line \u001b[0;32m25\u001b[0m\n\u001b[0;31m    xAxes = []\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "linkText": "Export to plot.ly",
+        "plotlyServerURL": "https://plot.ly",
+        "showLink": false
+       },
+       "data": [
+        {
+         "mode": "lines",
+         "name": "classic",
+         "type": "scatter",
+         "uid": "f42de123-d62c-470b-b0bf-6b8c2de447d8",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          12,
+          13,
+          14,
+          15,
+          16,
+          17,
+          18,
+          19,
+          20,
+          21,
+          22,
+          23,
+          24,
+          25,
+          26,
+          27,
+          28,
+          29
+         ],
+         "y": [
+          "1949",
+          "1943",
+          "1966",
+          "1989",
+          "1992",
+          "2013",
+          "2000",
+          "2012",
+          "2010",
+          "2005",
+          "2008",
+          "2009",
+          "2011",
+          "2010",
+          "1997",
+          "1998",
+          "1998",
+          "2005",
+          "2003",
+          "2008",
+          "2013",
+          "1993",
+          "1995",
+          "2014",
+          "2015",
+          "2016",
+          "2016",
+          "2016",
+          "2014",
+          "2017"
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "latest",
+         "type": "scatter",
+         "uid": "345d7633-6172-461e-b14f-c05fe4561883",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          12,
+          13,
+          14,
+          15,
+          16,
+          17,
+          18,
+          19,
+          20,
+          21,
+          22,
+          23,
+          24,
+          25,
+          26,
+          27,
+          28,
+          29
+         ],
+         "y": [
+          "2014",
+          "2014",
+          "2016",
+          "2016",
+          "2016",
+          "2017",
+          "2015",
+          "2013",
+          "2012",
+          "2011",
+          "2013",
+          "1992",
+          "1995",
+          "1993",
+          "1997",
+          "1998",
+          "1998",
+          "2000",
+          "2005",
+          "2005",
+          "2003",
+          "2010",
+          "2008",
+          "2009",
+          "2010",
+          "2008",
+          "1966",
+          "1949",
+          "1943",
+          "1989"
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"e9799e95-2860-4169-af62-24f760b31fa3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"e9799e95-2860-4169-af62-24f760b31fa3\")) {\n",
+       "    Plotly.newPlot(\"e9799e95-2860-4169-af62-24f760b31fa3\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1989\", \"1992\", \"2013\", \"2000\", \"2012\", \"2010\", \"2005\", \"2008\", \"2009\", \"2011\", \"2010\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\", \"1993\", \"1995\", \"2014\", \"2015\", \"2016\", \"2016\", \"2016\", \"2014\", \"2017\"], \"type\": \"scatter\", \"uid\": \"f42de123-d62c-470b-b0bf-6b8c2de447d8\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2015\", \"2013\", \"2012\", \"2011\", \"2013\", \"1992\", \"1995\", \"1993\", \"1997\", \"1998\", \"1998\", \"2000\", \"2005\", \"2005\", \"2003\", \"2010\", \"2008\", \"2009\", \"2010\", \"2008\", \"1966\", \"1949\", \"1943\", \"1989\"], \"type\": \"scatter\", \"uid\": \"345d7633-6172-461e-b14f-c05fe4561883\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "}\n",
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"e9799e95-2860-4169-af62-24f760b31fa3\")) {window._Plotly.Plots.resize(document.getElementById(\"e9799e95-2860-4169-af62-24f760b31fa3\"));};})</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"e9799e95-2860-4169-af62-24f760b31fa3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"e9799e95-2860-4169-af62-24f760b31fa3\")) {\n",
+       "    Plotly.newPlot(\"e9799e95-2860-4169-af62-24f760b31fa3\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1949\", \"1943\", \"1966\", \"1989\", \"1992\", \"2013\", \"2000\", \"2012\", \"2010\", \"2005\", \"2008\", \"2009\", \"2011\", \"2010\", \"1997\", \"1998\", \"1998\", \"2005\", \"2003\", \"2008\", \"2013\", \"1993\", \"1995\", \"2014\", \"2015\", \"2016\", \"2016\", \"2016\", \"2014\", \"2017\"], \"type\": \"scatter\", \"uid\": \"f42de123-d62c-470b-b0bf-6b8c2de447d8\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2014\", \"2014\", \"2016\", \"2016\", \"2016\", \"2017\", \"2015\", \"2013\", \"2012\", \"2011\", \"2013\", \"1992\", \"1995\", \"1993\", \"1997\", \"1998\", \"1998\", \"2000\", \"2005\", \"2005\", \"2003\", \"2010\", \"2008\", \"2009\", \"2010\", \"2008\", \"1966\", \"1949\", \"1943\", \"1989\"], \"type\": \"scatter\", \"uid\": \"345d7633-6172-461e-b14f-c05fe4561883\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "}\n",
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"e9799e95-2860-4169-af62-24f760b31fa3\")) {window._Plotly.Plots.resize(document.getElementById(\"e9799e95-2860-4169-af62-24f760b31fa3\"));};})</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
