Abstract tale of two queries elastic mode

--- a/tale-of-two-queries.ipynb
+++ b/tale-of-two-queries.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Basics & Prereqs (run once)\n",
     "\n",
@@ -15,11 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -38,10 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Our Task: Optimizing \"Drama\" and \"Science Fiction\" queries\n",
     "\n",
@@ -57,10 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Synthetic Judgment List Generation\n",
     "\n",
@@ -69,12 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -93,11 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Uncomment this line to see the judgments\n",
@@ -108,10 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Feature selection should be *easy!*\n",
     "\n",
@@ -126,11 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -143,7 +115,8 @@
     }
    ],
    "source": [
-    "config = {\"featureset\": {\n",
+    "config = {\n",
+    "    \"featureset\": {\n",
     "            \"features\": [\n",
     "            {\n",
     "                \"name\": \"release_year\",\n",
@@ -166,8 +139,7 @@
     "                        \"filter\": {\n",
     "                            \"match_phrase\": {\"genres\": \"Science Fiction\"}\n",
     "                        },\n",
-    "                        \"boost\": 10.0\n",
-    "                    }\n",
+    "                        \"boost\": 10.0                    }\n",
     "            }\n",
     "            },\n",
     "             {\n",
@@ -178,8 +150,7 @@
     "                        \"filter\": {\n",
     "                            \"match_phrase\": {\"genres\": \"Drama\"}\n",
     "                        },\n",
-    "                        \"boost\": 4.0\n",
-    "                    }\n",
+    "                        \"boost\": 4.0                    }\n",
     "                }\n",
     "            },\n",
     "             {\n",
@@ -195,18 +166,22 @@
     "                }\n",
     "            }\n",
     "    ]\n",
-    "    }}\n",
+    "    },\n",
+    "    \"validation\": {\n",
+    "       \"params\": {\n",
+    "           \"keywords\": \"Science Fiction\"\n",
+    "       },\n",
+    "       \"index\": \"tmdb\"\n",
+    "    }\n",
+    "}\n",
     "\n",
     "from ltr import setup_ltr\n",
-    "setup_ltr.run(config=config, featureSet='genre')"
+    "setup_ltr.run(config=config, featureset='genre')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Log from search engine -> to training set\n",
     "\n",
@@ -215,12 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -241,10 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Training - Guaraneed Perfect Search Results!\n",
     "\n",
@@ -253,24 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 100 -train data/genre_by_date_judgments_train.txt -save data/genre_model.txt\n",
+      "DONE\n",
       "Delete model genre: 404\n",
       "Created model genre: 201\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 95669916.43199906\n",
-      "2 - 3167416.4620914753\n",
-      "3 - 9.343045139389716\n",
+      "1 - 30989934.22204985\n",
+      "2 - 2891683.161237409\n",
+      "3 - 24.47444925009026\n",
       "4 - 0.0\n",
       "Perfect NDCG! 1.0\n"
      ]
@@ -293,10 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### But this search sucks!\n",
     "Try searches for \"Science Fiction\" and \"Drama\""
@@ -304,47 +267,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Science Fiction\"}, \"model\": \"genre\"}}}\n",
-      "Rogue One: A Star Wars Story \n",
-      "10.175102 \n",
+      "Why Him? \n",
+      "10.492266 \n",
       "2016 \n",
-      "['Adventure', 'Science Fiction', 'Action'] \n",
-      "A rogue band of resistance fighters unite for a mission to steal the Death Star plans and bring a new hope to the galaxy. \n",
+      "['Comedy'] \n",
+      "Ned, an overprotective dad, visits his daughter at Stanford where he meets his biggest nightmare: her well-meaning but socially awkward Silicon Valley billionaire boyfriend, Laird. A rivalry develops and Ned's panic level goes through the roof when he finds himself lost in this glamorous high-tech world and learns Laird is about to pop the question. \n",
       "---------------------------------------\n",
-      "Guardians of the Galaxy Vol. 2 \n",
-      "10.175102 \n",
-      "2017 \n",
-      "['Action', 'Adventure', 'Comedy', 'Science Fiction'] \n",
-      "The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. \n",
-      "---------------------------------------\n",
-      "Wonder Woman \n",
-      "10.175102 \n",
-      "2017 \n",
-      "['Action', 'Adventure', 'Fantasy', 'Science Fiction'] \n",
-      "An Amazon princess comes to the world of Man to become the greatest of the female superheroes. \n",
-      "---------------------------------------\n",
-      "Captain America: Civil War \n",
-      "10.175102 \n",
+      "X-Men: Apocalypse \n",
+      "10.492266 \n",
       "2016 \n",
-      "['Adventure', 'Action', 'Science Fiction'] \n",
-      "Following the events of Age of Ultron, the collective governments of the world pass an act designed to regulate all superhuman activity. This polarizes opinion amongst the Avengers, causing two factions to side with Iron Man or Captain America, which causes an epic battle between former allies. \n",
+      "['Science Fiction'] \n",
+      "After the re-emergence of the world's first mutant, world-destroyer Apocalypse, the X-Men must unite to defeat his extinction level plan. \n",
       "---------------------------------------\n",
-      "Doctor Strange \n",
-      "10.175102 \n",
+      "I Am Not a Serial Killer \n",
+      "10.492266 \n",
       "2016 \n",
-      "['Action', 'Adventure', 'Fantasy', 'Science Fiction'] \n",
-      "After his career is destroyed, a brilliant but arrogant surgeon gets a new lease on life when a sorcerer takes him under his wing and trains him to defend the world against evil. \n",
+      "['Horror', 'Thriller'] \n",
+      "Fifteen-year old John Cleaver is dangerous, and he knows it. He’s obsessed with serial killers, but really doesn’t want to become one. Terrible impulses constantly tempt him, so for his own sake, and the safety of those around, he lives by rigid rules to keep himself “good” and “normal”. However, when a real monster shows up in his town he has to let his dark side out in order to stop it – but without his rules to keep him in check, he might be more dangerous than the monster he’s trying to kill. \n",
+      "---------------------------------------\n",
+      "Tamara \n",
+      "10.492266 \n",
+      "2016 \n",
+      "['Comedy'] \n",
+      "Tamara, 15, complexed with her curves, decided its entry into second to get rid of the label of \"big\". To shut up the gossip, she made a bet with her best friend to go out with the first boy who pass the classroom door. No luck, the boy turns out to be Diego, the most handsome guy of high school. The bet is complicated for Tamara .... Between the dirty tricks of bitches of high school, a mother hen, boards \"drag\" his little sister, Tamara is a memorable year! \n",
+      "---------------------------------------\n",
+      "The Neon Demon \n",
+      "10.492266 \n",
+      "2016 \n",
+      "['Thriller', 'Horror'] \n",
+      "When aspiring model Jesse moves to Los Angeles, her youth and vitality are devoured by a group of beauty-obsessed women who will take any means necessary to get what she has. \n",
       "---------------------------------------\n"
      ]
     }
@@ -357,9 +316,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "source": [
     "### Why didn't it work!?!? Training data\n",
@@ -376,10 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -390,14 +345,16 @@
       "Recognizing 2 queries...\n",
       "REBUILDING TRAINING DATA for Science Fiction (0/2)\n",
       "REBUILDING TRAINING DATA for Drama (1/2)\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 100 -train data/genre_by_date_judgments_train.txt -save data/genre_model.txt\n",
+      "DONE\n",
       "Delete model genre: 200\n",
       "Created model genre: 201\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 56711025.15383451\n",
-      "4 - 34243334.40204898\n",
-      "2 - 59104.665908504234\n",
-      "3 - 26274.36408814093\n",
+      "4 - 802616758.725657\n",
+      "1 - 89257217.35776828\n",
+      "3 - 1573733.5830246205\n",
+      "2 - 1.953984578809708e-20\n",
       "Perfect NDCG! 1.0\n"
      ]
     }
@@ -436,52 +393,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"space\"}, \"model\": \"genre\"}}}\n",
-      "Battleship Potemkin \n",
-      "-2.3706646 \n",
-      "1925 \n",
-      "['Drama', 'History'] \n",
-      "A dramatized account of a great Russian naval mutiny and a resulting street demonstration which brought on a police massacre. The film had an incredible impact on the development of cinema and was a masterful example of montage editing. \n",
-      "---------------------------------------\n",
-      "The Gold Rush \n",
-      "-2.3706646 \n",
-      "1925 \n",
-      "['Adventure', 'Comedy', 'Drama', 'Family'] \n",
-      "A lone prospector ventures into Alaska looking for gold. He gets mixed up with some burly characters and falls in love with the beautiful Georgia. He tries to win her heart with his singular charm. \n",
-      "---------------------------------------\n",
-      "The General \n",
-      "-2.3706646 \n",
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Drama\"}, \"model\": \"genre\"}}}\n",
+      "The Shamrock Handicap \n",
+      "9.445964 \n",
       "1926 \n",
-      "['Western', 'Adventure', 'Drama', 'Action', 'Comedy', 'War'] \n",
-      "The General is a 1927 American silent film comedy from Buster Keaton. The film flopped when first released but is now regarded as the height of silent film comedy. The film is based on events from America’s civil war. \n",
+      "['Romance', 'Drama'] \n",
+      "The first film having an Irish motif that John Ford directed, a six reel delight set in Eire's County Kildare and in the United States, with a steeplechase background, mixing charged elements of comedy and sentimental drama, benefiting from a sterling cast including Leslie Fenton, Janet Gaynor, and Ford favourite J. Farrell MacDonald. \n",
+      "---------------------------------------\n",
+      "Sparrows \n",
+      "9.445964 \n",
+      "1926 \n",
+      "['Drama'] \n",
+      "Evil Mr.Grimes keeps a rag-tag bunch orphans on his farm deep in a swamp in the US South. He forces them to work in his garden and treats them like slaves. They are watched over by the eldest, Molly. A gang in league with Mr. Grimes kidnaps Doris, the beautiful little daughter of a rich man, and hides her out on Grimes' farm, awaiting ransom. When the police close in, and Mr. Grimes threatens to throw Doris into the bottomless mire, Molly must lead her little flock out through the alligator-infested swamp. \n",
+      "---------------------------------------\n",
+      "Faust \n",
+      "9.445964 \n",
+      "1926 \n",
+      "['Drama', 'Fantasy', 'Horror'] \n",
+      "God and Satan war over earth; to settle things, they wager on the soul of Faust, a learned and prayerful alchemist. \n",
       "---------------------------------------\n",
       "The Son of the Sheik \n",
-      "-2.3706646 \n",
+      "9.445964 \n",
       "1926 \n",
       "['Adventure', 'Drama', 'Action', 'Romance'] \n",
       "Ahmed, son of Diana and Sheik Ahmed Ben Hassan, falls in love with Yasmin, a dancing girl who fronts her father's gang of mountebanks. She and Ahmed meet secretly until one night when her father and the gang capture the son of the sheik, torture him, and hold him for ransom. \n",
       "---------------------------------------\n",
-      "The Scarlet Letter \n",
-      "-2.3706646 \n",
+      "The Adventures of Prince Achmed \n",
+      "9.445964 \n",
       "1926 \n",
-      "['Drama'] \n",
-      "In Puritan Boston, seamstress Hester Prynne is punished for playing on the Sabbath day; but kindly minister Arthur Dimmesdale takes pity on her. The two fall in love, but their relationship cannot be: Hester is already married to Roger Prynne, a physician who has been missing seven years. Dimmesdale has to go away to England; when he returns, he finds Hester pregnant with their child, and the focus of the town's censure. In a humiliating public ceremony, she is forced to don the scarlet letter A - for adultery - and wear it the rest of her life. \n",
+      "['Drama', 'Animation', 'Adventure', 'Fantasy'] \n",
+      "Based on stories from \"The Arabian Nights.\" A wicked sorcerer tricks Prince Achmed into riding a magical flying horse. The heroic prince is able to subdue the magical horse, which he uses to fly off to many adventures. While travelling, he falls in love with the beautiful Princess Peri Banu, and must defeat an army of demons to win her heart. The film is animated using the silhouette technique. \n",
       "---------------------------------------\n"
      ]
     }
    ],
    "source": [
     "from ltr import search\n",
-    "search.run(keywords=\"space\", modelName=\"genre\")"
+    "search.run(keywords=\"Drama\", modelName=\"genre\")"
    ]
   },
   {
@@ -520,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
