--- a/hello-ltr.ipynb
+++ b/hello-ltr.ipynb
@@ -28430,7 +28430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28484,7 +28484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28513,7 +28513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28533,10 +28533,10 @@
     {
      "data": {
       "text/plain": [
-       "<ltr.train.TrainingLog at 0x10e1d2390>"
+       "<ltr.train.TrainingLog at 0x11f040748>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28557,7 +28557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -28573,17 +28573,174 @@
      "output_type": "display_data"
     },
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-6efd4710602c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/dev/osc/train/hello-ltr/ltr/plot.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mmodelData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmain_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tmdb'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mxAxes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/dev/osc/train/hello-ltr/ltr/client/elastic_client.py\u001b[0m in \u001b[0;36mmodel_query\u001b[0;34m(self, index, model, model_params, query)\u001b[0m\n\u001b[1;32m    132\u001b[0m         \u001b[0;31m# Transforrm to consistent format between ES/Solr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0mmatches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mhit\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'hits'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'hits'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m             \u001b[0mmatches\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhit\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_source'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "linkText": "Export to plot.ly",
+        "plotlyServerURL": "https://plot.ly",
+        "showLink": false
+       },
+       "data": [
+        {
+         "mode": "lines",
+         "name": "classic",
+         "type": "scatter",
+         "uid": "170170f5-eb85-4e8f-82e2-b3fd51640dde",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          12,
+          13,
+          14,
+          15,
+          16,
+          17,
+          18,
+          19,
+          20,
+          21,
+          22,
+          23,
+          24,
+          25,
+          26,
+          27,
+          28,
+          29
+         ],
+         "y": [
+          "1943",
+          "1949",
+          "1966",
+          "1989",
+          "1993",
+          "2008",
+          "2009",
+          "2010",
+          "2010",
+          "2008",
+          "1995",
+          "1998",
+          "1998",
+          "2005",
+          "2003",
+          "2000",
+          "2005",
+          "1997",
+          "1992",
+          "2016",
+          "2015",
+          "2016",
+          "2016",
+          "2013",
+          "2012",
+          "2014",
+          "2017",
+          "2011",
+          "2014",
+          "2013"
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "latest",
+         "type": "scatter",
+         "uid": "3bcfeba9-2ab1-4e27-92ae-ed4db49b7a6d",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11,
+          12,
+          13,
+          14,
+          15,
+          16,
+          17,
+          18,
+          19,
+          20,
+          21,
+          22,
+          23,
+          24,
+          25,
+          26,
+          27,
+          28,
+          29
+         ],
+         "y": [
+          "2011",
+          "2013",
+          "2013",
+          "2015",
+          "2017",
+          "2016",
+          "2016",
+          "2016",
+          "2012",
+          "2014",
+          "2014",
+          "1995",
+          "2008",
+          "2008",
+          "1998",
+          "1998",
+          "2003",
+          "2000",
+          "1997",
+          "2005",
+          "2005",
+          "2010",
+          "2010",
+          "2009",
+          "1993",
+          "1989",
+          "1992",
+          "1966",
+          "1949",
+          "1943"
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"7c734e09-1ba9-45b2-ac12-d462d117238a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"7c734e09-1ba9-45b2-ac12-d462d117238a\")) {\n",
+       "    Plotly.newPlot(\"7c734e09-1ba9-45b2-ac12-d462d117238a\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1949\", \"1966\", \"1989\", \"1993\", \"2008\", \"2009\", \"2010\", \"2010\", \"2008\", \"1995\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2005\", \"1997\", \"1992\", \"2016\", \"2015\", \"2016\", \"2016\", \"2013\", \"2012\", \"2014\", \"2017\", \"2011\", \"2014\", \"2013\"], \"type\": \"scatter\", \"uid\": \"170170f5-eb85-4e8f-82e2-b3fd51640dde\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2011\", \"2013\", \"2013\", \"2015\", \"2017\", \"2016\", \"2016\", \"2016\", \"2012\", \"2014\", \"2014\", \"1995\", \"2008\", \"2008\", \"1998\", \"1998\", \"2003\", \"2000\", \"1997\", \"2005\", \"2005\", \"2010\", \"2010\", \"2009\", \"1993\", \"1989\", \"1992\", \"1966\", \"1949\", \"1943\"], \"type\": \"scatter\", \"uid\": \"3bcfeba9-2ab1-4e27-92ae-ed4db49b7a6d\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "}\n",
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"7c734e09-1ba9-45b2-ac12-d462d117238a\")) {window._Plotly.Plots.resize(document.getElementById(\"7c734e09-1ba9-45b2-ac12-d462d117238a\"));};})</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"7c734e09-1ba9-45b2-ac12-d462d117238a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"7c734e09-1ba9-45b2-ac12-d462d117238a\")) {\n",
+       "    Plotly.newPlot(\"7c734e09-1ba9-45b2-ac12-d462d117238a\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"1943\", \"1949\", \"1966\", \"1989\", \"1993\", \"2008\", \"2009\", \"2010\", \"2010\", \"2008\", \"1995\", \"1998\", \"1998\", \"2005\", \"2003\", \"2000\", \"2005\", \"1997\", \"1992\", \"2016\", \"2015\", \"2016\", \"2016\", \"2013\", \"2012\", \"2014\", \"2017\", \"2011\", \"2014\", \"2013\"], \"type\": \"scatter\", \"uid\": \"170170f5-eb85-4e8f-82e2-b3fd51640dde\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [\"2011\", \"2013\", \"2013\", \"2015\", \"2017\", \"2016\", \"2016\", \"2016\", \"2012\", \"2014\", \"2014\", \"1995\", \"2008\", \"2008\", \"1998\", \"1998\", \"2003\", \"2000\", \"1997\", \"2005\", \"2005\", \"2010\", \"2010\", \"2009\", \"1993\", \"1989\", \"1992\", \"1966\", \"1949\", \"1943\"], \"type\": \"scatter\", \"uid\": \"3bcfeba9-2ab1-4e27-92ae-ed4db49b7a6d\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "}\n",
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"7c734e09-1ba9-45b2-ac12-d462d117238a\")) {window._Plotly.Plots.resize(document.getElementById(\"7c734e09-1ba9-45b2-ac12-d462d117238a\"));};})</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
